# Chat-app-multithreading-server-

./: README.md  server.c
src/: CMakeLists.txt
src/jalon02/: CMakeLists.txt  client.c  functions.c  functions.h  server.c
src/jalon04/: CMakeLists.txt
src/jalon04/client/: client.c
src/jalon04/commons/: functions.c  functions.h  network.c  network.h
src/jalon04/server/: channel.c  channel.h  file_transfer.c  file_transfer.h  server.c  server.h  server_ftransfer.c  server_ftransfer.h  server_lib.c  users.c  users.h
